# .claude

./: .gitignore  CLAUDE.md  CONTEXTUAL-CHANGELOG-PLAN.md  CONTEXTUAL-LOGGING-IMPLEMENTATION-PLAN.md  ENHANCED-TRACKING.md  GETTING_STARTED.md  LICENSE  LONG-AGENT-CONTEXT.md  README.md  SLASH-COMMANDS-IMPLEMENTATION.md  TROUBLESHOOTING.md  debug_notification.json  debug_post_tool_use.json  debug_pre_tool_use.json  debug_stop.json  install.ps1  install.sh  intelligence.db  pyproject.toml  schema.sql  settings.json  setup.ps1  setup.sh  setup_database.py  statusline-command.ps1  statusline-command.sh  test_contextual_logging.md  test_interruption_scenario.md  test_main_agent.txt  test_subagent.md  update.ps1  update.sh
agents/: github-workflow-enforcer.md
commands/: file_patterns.md  load_context.md  manage_work.md  session_summary.md  smarter-claude_female.md  smarter-claude_interaction_level.md  smarter-claude_male.md  smarter-claude_update.md  smarter-claude_voice.md  work_query.md
developer-docs/: CONTEXTUAL-LOGGING-IMPLEMENTATION-PLAN.md  DATABASE_SCHEMA.md  VERSIONING.md  WINDOWS_CROSSPLATFORM_HANDOFF.md
docs/: CLAUDE_CODE_HOOKS_REFERENCE.md  CONTEXTUAL_SCHEMA_DESIGN.md  DATABASE_SCHEMA.md  GETTING_STARTED.md  (+5 more)
hooks/utils/tts/: coqui_male_tts.py  coqui_tts.py  demo_coqui_voices.py  kokoro_voice.py  macos_female_tts.py  macos_male_tts.py  macos_native_tts.py  pyproject.toml  pyttsx3_voice_tester.py  test_coqui_voices.py  test_engine_selection.py  test_male_coqui_voices.py  test_voice.py  test_working_engines.py  test_xtts_voices.py  tts_controller.py
(+26 files in other folders)
