[project]
name = "claude-code-tts"
version = "1.0.0"
description = "Simple TTS for Claude Code"
dependencies = [
    "kokoro-onnx>=0.4.9",
    "soundfile>=0.13.1",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# Windows-specific dependencies for cross-platform support
windows = [
    "pygame>=2.5.0",   # Cross-platform audio playback
    "psutil>=5.9.0",   # Cross-platform process management
]
# All platforms (install with: pip install .[all])
all = [
    "pygame>=2.5.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
exclude = ["*"]