[project]
name = "claude-code-tts"
version = "1.0.0"
description = "Simple TTS for Claude Code"
dependencies = [
    "kokoro-onnx>=0.4.9",
    "soundfile>=0.13.1",
    "numpy>=1.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
exclude = ["*"]